test/error/syntax/err2.rzy

Foo{Bar:Natural} = Elementary
end

Err2 = Composition
  foo: Foo;  // no template parameter
end

